ts: add new tests for sticky rules

--- a/testsuite/modulefiles.4/.modulerc
+++ b/testsuite/modulefiles.4/.modulerc
@@ -48,3 +48,14 @@ if {[info exists env(TESTSUITE_MODULEPATH_LABEL)]} {
         }
     }
 }
+
+if {[info exists ::env(TESTSUITE_STICKY)]} {
+    switch -- $::env(TESTSUITE_STICKY) {
+        6 - 7 {
+            module-alias alsticky1 sticky1/2.0
+        }
+        8 {
+            module-tag sticky sticky0
+        }
+    }
+}
