--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1336,8 +1336,9 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list args} {
          }
 
          # declare the prereq of this module
-         if {[set modpre [getLoadedPrereq $modname 1]] ne {}} {
-            append-path __MODULES_LMPREREQ $modpre
+         if {[llength [set mod_prereq_list [getLoadedPrereq $modname]]] > 0} {
+            append-path __MODULES_LMPREREQ [serialize2LvlModulePropertyValue\
+               $modname $mod_prereq_list]
          }
 
          # declare the alternative names of this module
