--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1347,8 +1347,10 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list args} {
          }
 
          # declare the variant of this module
-         if {[set modvrspec [getLoadedVariant $modname 1]] ne {}} {
-            append-path __MODULES_LMVARIANT $modvrspec
+         if {[llength [set mod_vr_spec_list [getLoadedVariant $modname]]] >\
+            0} {
+            append-path __MODULES_LMVARIANT [serialize2LvlModulePropertyValue\
+               $modname $mod_vr_spec_list]
          }
 
          # declare the tags of this module
