--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1331,8 +1331,10 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list args} {
          }
 
          # register declared conflict in environment
-         if {[set modcon [getLoadedConflict $modname 1]] ne {}} {
-            append-path __MODULES_LMCONFLICT $modcon
+         if {[llength [set mod_conflict_list [getLoadedConflict $modname]]] >\
+            0} {
+            append-path __MODULES_LMCONFLICT [serializeModulePropertyValue\
+               $modname $mod_conflict_list]
          }
 
          # declare the prereq of this module
