Rework loading module altname property serialization
Remove serialization code from getLoadedAltname to use dedicated
serialize2LvlModulePropertyValue procedure.

--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -2764,7 +2764,7 @@ proc family {name} {
    # only one loaded module could provide a given family
    conflict $name
    # set name as an alias for currently loading module
-   setLoadedAltname [currentState modulename] al|$name
+   setLoadedAltname [currentState modulename] [list al $name]
 
    # set variable in environment to know what module name provides family
    set upname [string toupper $name]
