--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1364,9 +1364,11 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list args} {
          if {[set modtag [getExtraTagList $modnamevr 1]] ne {}} {
             append-path __MODULES_LMEXTRATAG $modtag
          }
-         if {[set modstickyrule [getStickyRuleList $modnamevr 1 $modfile]] ne\
-            {}} {
-            append-path __MODULES_LMSTICKYRULE $modstickyrule
+         if {[llength [set mod_stickyrule_list [getStickyRuleList $modnamevr\
+            $modfile]]] > 0} {
+            append-path __MODULES_LMSTICKYRULE\
+               [serialize2LvlModulePropertyValue $modname\
+                  $mod_stickyrule_list]
          }
 
          # declare module qualified for refresh evaluation
