Use new unsetEnvLoaded procs on cmdModuleTag

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -2810,12 +2810,8 @@ proc cmdModuleTag {unset_extra uasked tag_list args} {
 
          lappendState mode unload
          # first unset tags declared for this module on LM env var
-         if {[set modtag [getExportTagList $modname 1]] ne {}} {
-            remove-path __MODULES_LMTAG $modtag
-         }
-         if {[set modtag [getExtraTagList $modname 1]] ne {}} {
-            remove-path __MODULES_LMEXTRATAG $modtag
-         }
+         unsetEnvLoadedModuleProperty $modname tag
+         unsetEnvLoadedModuleProperty $modname extratag
          lpopState mode
 
          # remove extra tags currently set not part of tag list if asked
