Rework loading module tag property serialization
Remove serialization code from getExportTagList to use dedicated
serializeModulePropertyValue procedure.

--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -742,15 +742,10 @@ proc getTagList {mod {fpmod {}} {sort 1}} {
 }
 
 # return tags applying to mod that can be exported
-proc getExportTagList {mod {serialized 0} {fpmod {}}} {
+proc getExportTagList {mod {fpmod {}}} {
    # remove loaded/hidden tags from the list to register
    lassign [getDiffBetweenList [getTagList $mod $fpmod 0] [list loaded\
       hidden]] ret
-   if {$serialized && [llength $ret] > 0} {
-      # extract mod name and version from full spec with variants
-      set ret [join [list [getModuleNameAndVersFromVersSpec $mod] {*}$ret]\
-         [getState sub1_separator]]
-   }
    return $ret
 }
 
