--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1358,8 +1358,10 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list args} {
          }
 
          # declare the tags of this module
-         if {[set modtag [getExportTagList $modnamevr 1 $modfile]] ne {}} {
-            append-path __MODULES_LMTAG $modtag
+         if {[llength [set mod_tag_list [getExportTagList $modnamevr\
+            $modfile]]] > 0} {
+            append-path __MODULES_LMTAG [serializeModulePropertyValue\
+               $modname $mod_tag_list]
          }
          if {[set modtag [getExtraTagList $modnamevr 1]] ne {}} {
             append-path __MODULES_LMEXTRATAG $modtag
@@ -1388,7 +1390,7 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list args} {
 
          # record module title (name, variants and tags)
          registerModuleDesignation $msgrecid $modname [getVariantList\
-            $modname 7] [getExportTagList $modname 0 $modfile]
+            $modname 7] [getExportTagList $modname $modfile]
 
          # consider evaluation hidden if hidden loaded module is auto loaded
          # and no specific messages are recorded for this evaluation
@@ -2849,8 +2851,9 @@ proc cmdModuleTag {unset_extra uasked tag_list args} {
 
          # set the new tag set for module on LM env var
          lappendState mode load
-         if {[set modtag [getExportTagList $modnamevr 1]] ne {}} {
-            append-path __MODULES_LMTAG $modtag
+         if {[llength [set mod_tag_list [getExportTagList $modnamevr]]] > 0} {
+            append-path __MODULES_LMTAG [serializeModulePropertyValue\
+               $modname $mod_tag_list]
          }
          if {[set modtag [getExtraTagList $modnamevr 1]] ne {}} {
             append-path __MODULES_LMEXTRATAG $modtag
