Rework loading module extratag property serialization
Remove serialization code from getExtraTagList to use dedicated
serializeModulePropertyValue procedure.

--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -750,15 +750,9 @@ proc getExportTagList {mod {fpmod {}}} {
 }
 
 # return extra tags set on mod
-proc getExtraTagList {mod {serialized 0}} {
+proc getExtraTagList {mod} {
    if {[info exists ::g_extraTagHash($mod)]} {
-      if {$serialized} {
-         # extract mod name and version from full spec with variants
-         set ret [join [list [getModuleNameAndVersFromVersSpec $mod]\
-            {*}$::g_extraTagHash($mod)] [getState sub1_separator]]
-      } else {
-         set ret $::g_extraTagHash($mod)
-      }
+      set ret $::g_extraTagHash($mod)
    } else {
       set ret {}
    }
