--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1363,8 +1363,9 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list args} {
             append-path __MODULES_LMTAG [serializeModulePropertyValue\
                $modname $mod_tag_list]
          }
-         if {[set modtag [getExtraTagList $modnamevr 1]] ne {}} {
-            append-path __MODULES_LMEXTRATAG $modtag
+         if {[llength [set mod_tag_list [getExtraTagList $modnamevr]]] > 0} {
+            append-path __MODULES_LMEXTRATAG [serializeModulePropertyValue\
+               $modname $mod_tag_list]
          }
          if {[llength [set mod_stickyrule_list [getStickyRuleList $modnamevr\
             $modfile]]] > 0} {
@@ -2855,8 +2856,9 @@ proc cmdModuleTag {unset_extra uasked tag_list args} {
             append-path __MODULES_LMTAG [serializeModulePropertyValue\
                $modname $mod_tag_list]
          }
-         if {[set modtag [getExtraTagList $modnamevr 1]] ne {}} {
-            append-path __MODULES_LMEXTRATAG $modtag
+         if {[llength [set mod_tag_list [getExtraTagList $modnamevr]]] > 0} {
+            append-path __MODULES_LMEXTRATAG [serializeModulePropertyValue\
+               $modname $mod_tag_list]
          }
          lpopState mode
 
