Use sub1_separator state value rather directly '&'

--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -1819,7 +1819,8 @@ proc getLoadedModuleWithVariantSaveTagArrayList {} {
 proc unsetEnvLoadedModuleProperty {mod_name prop} {
    set prop_env_var [getLoadedModulePropertyEnvVarName $prop]
    set env_loaded_prop_list [getEnvLoadedModulePropertyList $prop]
-   set mod_pattern_in_env_loaded_prop [escapeGlobChars $mod_name]&*
+   set mod_pattern_in_env_loaded_prop [escapeGlobChars $mod_name][getState\
+      sub1_separator]*
 
    set mod_env_loaded_prop [lsearch -glob -inline $env_loaded_prop_list\
       $mod_pattern_in_env_loaded_prop]
